# raft-hs

./: CHANGELOG.md  README.md  cabal.project  hie.yaml  raft-hs.cabal
app/: Main.hs
raft/: raft-hs.cabal
raft/src/Raft/: Log.hs  Message.hs  Server.hs
raft/tests/: Spec.hs  SpecFixtures.hs
raft/tests/Raft/: ServerSpec.hs
src/: Raft.hs
src/Raft/: Log.hs  Message.hs  Server.hs  Shared.hs
tests/: Spec.hs  SpecFixtures.hs
tests/Raft/: LogSpec.hs  MessageSpec.hs  ServerSpec.hs
