cabal-version:      2.4
name:               raft
version:            0.1.0.0
author:             Erik Aker
maintainer:         eraker@gmail.com
license:            BSD-3-Clause
copyright:          2021 Erik Aker
synopsis:           A raft implementation in Haskell2010

extra-source-files: CHANGELOG.md

executable raft
    main-is:          Main.hs
    build-depends:    base, raft
    hs-source-dirs:   app
    GHC-Options:      -Wall -rtsopts -with-rtsopts=-N
    Default-Language: Haskell2010

Library
    hs-source-dirs:   src
    GHC-Options:      -Wall
    Default-Language: Haskell2010
    Exposed-Modules:  Raft                ,
                      Raft.Log            ,
                      Raft.Message        ,
                      Raft.Server
    Build-Depends:
                    base                  ,
                    containers            ,
                    hashable              ,
                    stm                   ,
                    unordered-containers  ,
                    vector

test-suite raft-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  Build-Depends:
                    raft                ,
                    base                ,
                    hspec               ,
                    hspec-discover      ,
                    QuickCheck          ,
                    quickcheck-instances
  Exposed-Modules: Raft.LogSpec
  default-language: Haskell2010